--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
 	<h1 align = center> Flowing Code </h1>
+	<h2 align = center> <i> Code that makes things flow... </i> </h2>
 </body>
 </html>
