--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
 <body>
 	<h1 align = center> Flowing Code </h1>
 	<h3 align = center> <i> Code that makes things flow... </i> </h3>
+
+<div>
+	<a href = "test.html"> TEST </a>
+	<a href = "theory.html"> CODE </a>
+	<a href = "theory.html"> ABOUT </a>
+	<a href = "theory.html"> REFERENCES </a>
+</div>
+
 </body>
 </html>
