--- a/test.html
+++ b/test.html
@@ -10,10 +10,10 @@
   <p>Tabs are perfect for single page web applications, or for web pages capable of displaying different subjects. Click on the links below.</p>
 </div>
 
-<div class="w3-bar w3-black">
-  <button class="w3-bar-item w3-button" onclick="openCity('London')">London</button>
-  <button class="w3-bar-item w3-button" onclick="openCity('Paris')">Paris</button>
-  <button class="w3-bar-item w3-button" onclick="openCity('Tokyo')">Tokyo</button>
+<div>
+  <button onclick="openCity('London')">London</button>
+  <button onclick="openCity('Paris')">Paris</button>
+  <button onclick="openCity('Tokyo')">Tokyo</button>
 </div>
 
 <div id="London" class="w3-container city">
