--- a/index.html
+++ b/index.html
@@ -4,17 +4,25 @@
 	<title>
 		Flowing Code
 	</title>
+	<link rel="stylesheet" href="style.css"> 
 </head>
 <body>
+	<!--<div id='circle' align = center></div>-->
 	<h1 align = center> Flowing Code </h1>
 	<h3 align = center> <i> Code that makes things flow... </i> </h3>
+	
+	<hr id='title-hr'>
+<div id='tab'>
+	<div id = 'tabs'>
+		<a href = "index.html" id = 'tabs'> HOME </a>
+		<a href = "references.html" id = 'tabs'> REFERENCES </a>
+		<a href = "test.html" id = 'tabs'> TEST </a>
+	</div>
 
-<div>
-	<a href = "test.html"> TEST </a>
-	<a href = "theory.html"> CODE </a>
-	<a href = "theory.html"> ABOUT </a>
-	<a href = "theory.html"> REFERENCES </a>
+	
 </div>
+
+<hr id='title-hr'>
 
 </body>
 </html>
