--- a/references.html
+++ b/references.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>
-		Flowing Code
+		Flowing Code - References
 	</title>
 	<link rel="stylesheet" href="style.css"> 
 </head>
@@ -15,10 +15,13 @@
 	<div id='tab'>
 		<div id = 'tabs'>
 			<a href = "index.html" id = 'tabs'> HOME </a>
-			<!--<a href = "references.html" id = 'tabs'> REFERENCES </a>-->
+			<a href = "references.html" id = 'tabs'> REFERENCES </a>
 		</div>
 	</div>
 	<hr id='title-hr'>
-	
+	<div id='content'>
+		<p> 1. A Sharma,"Introduction to Computational Fluid Dynamics Development, Application and Analysis",Ane Books Pvt. Ltd., 2018</p>
+		<p> 2. H Versteeg, Malalasekara, "", Pearson Publications</p>
+	</div>
 </body>
 </html>
