--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 	
 	<hr id='title-hr'>
 	<div id='tab'>
-		<div id = 'tabs'>
-			<a href = "index.html" id = 'tabs'> HOME </a>
-			<!--<a href = "references.html" id = 'tabs'> REFERENCES </a>-->
-		</div>
+		<a href = "index.html" id = 'tab-button'> HOME </a>
+		<a href="index.html" id = 'tab-button'> REFERENCES</a>
 	</div>
 	<hr id='title-hr'>
-	
+
+	<div id="home-content">
+		<a href="firstpost.html"> Idea of Grid</a>
+	</div>
 </body>
 </html>
