--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<hr id='title-hr'>
 
 	<div id="home-content">
-		<a href="firstpost.html"> Idea of Grid</a>
+		<a href="firstpost.html"> First Post</a>
 	</div>
 </body>
 </html>
