--- a/firstpost.html
+++ b/firstpost.html
@@ -17,7 +17,7 @@
 		<a href="index.html" id = 'tab-button'> REFERENCES</a>
 	</div>
 	<hr id ='title-hr'>
-	<h1 id = 'post-title'> Idea of Grid </h1>
+	<h1 id = 'post-title'> First Post </h1>
 	
 	<div class="row">
 	  <div class="column side">
